@@ -195,7 +195,7 @@ span.ask.sector			{background-color:#000; display:block; width:960px; margin:0 a
 
 /* Triangles */
 .peak.donor,
-.peak.sector			{margin:0 auto; width:0; height:0; border-left:20px solid transparent; border-right:20px solid transparent; border-top:20px solid #000; display:block;}
+.peak.chart_sector		{margin:0 auto; width:0; height:0; border-left:20px solid transparent; border-right:20px solid transparent; border-top:20px solid #000; display:block;}
 
 .ask_title				{padding:20px 40px; display:block; color:#fff;}
 
