@@ -195,7 +195,7 @@ span.ask.sector			{background-color:#00C475;}
 .main_peak_wrap			{width:960px; background-color:#FFF; display:block;}
 .peak					{margin:0 auto; width:0; height:0; border-left:20px solid transparent; border-right:20px solid transparent; display:block;}	/* Triangles */
 .peak.donor				{border-top:20px solid #008FFF;}
-.peak.sector			{border-top:20px solid #00C475;}
+.peak.chart_sector		{border-top:20px solid #00C475;}
 .caption				{border-bottom:0;}
 .caption:last-of-type	{border-bottom:1px;}
 .ask_title				{padding:20px 40px; display:block;}
