@@ -70,7 +70,7 @@ span.ask.donor			{background-color:rgba(206,131,0,1);}
 span.ask.sector			{background-color:rgba(206,131,0,1);}
 .main_peak_wrap			{background-color:rgba(255,255,255,1);}
 .peak.donor				{border-top:20px solid rgba(206,131,0,1);}
-.peak.sector			{border-top:20px solid rgba(206,131,0,1);}
+.peak.chart_sector		{border-top:20px solid rgba(206,131,0,1);}
 a.view_all_money		{background-color:rgba(15,15,15,0.7); color:rgba(204,204,204,1);}
 a.view_all_money:hover	{background-color:rgba(15,15,15,0.9); color:rgba(255,255,255,1);}
 
