@@ -116,7 +116,7 @@ span.ask.donor			{background-color:var(--base11);}
 span.ask.sector			{background-color:var(--base11);}
 .main_peak_wrap			{background-color:var(--base15);}
 .peak.donor				{border-top:20px solid var(--base11);}
-.peak.sector			{border-top:20px solid var(--base11);}
+.peak.chart_sector		{border-top:20px solid var(--base11);}
 span.graph_view_all:hover	{background-color:var(--base04); color:var(--base15);}
 
 
