@@ -331,7 +331,7 @@
 	<span class="ask sector">
 		<span class="ask_title">{title_sector_year_text}</span>
 		<span class="main_peak_wrap">
-			<span class="peak sector"></span>
+			<span class="peak chart_sector"></span>
 		</span>
 	</span>
 <div id="sector_graph"></div>
@@ -402,9 +402,9 @@
 	var opts={
 		layout:"right",
 		width:958,
-		height:320,
+		height:300,
 		center_x:250,
-		center_y:150,
+		center_y:140,
 		radius:135,
 		hole:40,
 		caption_css:undefined,
@@ -458,9 +458,9 @@
 	var opts={
 		layout:"right",
 		width:958,
-		height:320,
+		height:300,
 		center_x:250,
-		center_y:150,
+		center_y:140,
 		radius:135,
 		hole:40,
 		caption_css:undefined,
@@ -501,7 +501,7 @@
 	<span class="ask sector">
 		<span class="ask_title">{title_publisher_sectors_text}</span>
 		<span class="main_peak_wrap">
-			<span class="peak sector"></span>
+			<span class="peak chart_sector"></span>
 		</span>
 	</span>
 <div id="publisher_sectors_graph"></div>
@@ -515,9 +515,9 @@
 		layout:"left",
 		clockwise:-1,
 		width:958,
-		height:370,
+		height:300,
 		center_x:750,
-		center_y:170,
+		center_y:140,
 		radius:135,
 		hole:40,
 		caption_css:undefined,
