@@ -27,7 +27,7 @@ body		{background-color:#47506B; margin-top:40px; color:#FFF;}
 .header,
 .header_doc	{font-size:14px; color:#ccc; text-transform:uppercase; display:block; border-bottom:1px solid #aaa; padding-bottom:10px; margin-bottom:20px;}
 .header_doc	{border:0; margin:0;}
-.header_section	{font-size:12px; color:#FFF; background-color:rgba(17,46,105,0.9); padding:10px 40px; margin:0 0 20px -50px; width:900px; text-transform:uppercase;}
+.header_section	{font-size:12px; color:#FFF; background-color:rgba(17,46,105,0.9); padding:10px 40px; margin:0 0 20px -50px; width:980px; text-transform:uppercase; box-sizing:border-box;}
 .sticky		{position:sticky; top:-1px; z-index:2;}
 .nostick	{position:initial;}
 span.block	{display:block;}
