@@ -2,6 +2,8 @@ Development Portal (2019-11-13 shi)
 ==============================
 Fix org file table layout
 Update source links
+Fix sector graph peak and chart size
+Update themes
 
 
 Development Portal (2019-11-12 shi)
